# FaultBench

./: .env.example  .gitattributes  .gitignore  README.md  app_conversation_service_base.py  app_inspect.json  config.yaml  docker-compose.yml  mounts.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
docker/agent/: Dockerfile
docker/sandbox/: Dockerfile
docs/: architecture.md  ci.md  examples.md  mutations.md
examples/config_app/: app.py  test_app.py
examples/fastapi_app/: app.py  test_app.py
examples/flask_app/: app.py  config.json  test_app.py
examples/mini_app/: app.py  schema.sql  test_app.py
examples/real_world_patterns/api_contract_break/: client.py  config.json  test_api.py
examples/real_world_patterns/env_var_drift/: app.py  config.json  test_env.py
examples/real_world_patterns/sqlalchemy_config_break/: app.py  test_db.py
faultbench/: __init__.py  __main__.py  cli.py  config.py  constants.py  logging.py  models.py
faultbench/agent/: __init__.py  base.py  openhands_client.py
faultbench/db/: __init__.py  schema.sql  store.py
faultbench/engine/: __init__.py  lifecycle.py  orchestrator.py
faultbench/metrics/: __init__.py  collector.py  log_parser.py
faultbench/mutations/: __init__.py  api_contract_drift.py  base.py  config_corruption.py  dependency_drift.py  missing_file.py  registry.py  schema_drift.py
faultbench/reporting/: __init__.py  charts.py  comparator.py  generator.py
faultbench/sandbox/: __init__.py  docker_sandbox.py  file_ops.py
pytest_faultbench/: plugin.py  reporting.py  types.py  workspace.py
pytest_faultbench/mutations/: __init__.py  base.py  config_drift.py  malformed_config.py  schema_drift.py
scripts/: probe_agent_server.py  probe_openhands.py  smoke_test.py
tasks/task_001_todo_api/: README.md  app.py  config.yaml  database.py  models.py  mutations.yaml  requirements.txt  task.yaml  verify.sh
tasks/task_002_csv_pipeline/: README.md  config.yaml  mutations.yaml  pipeline.py  requirements.txt  task.yaml  transformers.py  validators.py
tasks/task_003_user_auth/: README.md  auth.py  config.yaml  database.py  models.py  mutations.yaml  requirements.txt  task.yaml  token_manager.py
tasks/task_004_markdown_site/: README.md  config.yaml  generator.py  mutations.yaml  parser.py  requirements.txt  task.yaml  templates.py
tasks/task_005_inventory_cli/: README.md  cli.py  config.yaml  inventory.py  mutations.yaml  requirements.txt  storage.py  task.yaml
tasks/task_hello_world/: README.md  mutations.yaml  task.yaml  verify.py
tests/: test_config_mutations.py  test_lifecycle_safety.py  test_plugin.py  test_reporting.py  test_schema_drift.py
tests/integration/: test_pipeline.py
tests/unit/: test_runner.py
(+11 files in other folders)
