[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-faultbench"
version = "0.1.0"
description = "Resilience testing for environmental and infrastructure assumptions."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Armaan Jain" }
]

license = { text = "Apache-2.0" }

dependencies = [
    "pytest>=7.0"
]

keywords = [
    "pytest",
    "resilience",
    "fault-injection",
    "configuration",
    "infrastructure",
    "testing",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/armaanjain-byte/FaultBench"
Repository = "https://github.com/armaanjain-byte/FaultBench"
Issues = "https://github.com/armaanjain-byte/FaultBench/issues"

[project.optional-dependencies]
examples = [
    "fastapi",
    "flask",
    "httpx",
    "uvicorn",
]

[project.entry-points.pytest11]
faultbench = "pytest_faultbench.plugin"

[tool.setuptools.packages.find]
include = ["pytest_faultbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]